fixed all overlapping stuff to work properly

--- a/styles.css
+++ b/styles.css
@@ -927,7 +927,6 @@ color: #D66D50;
     font-weight: bolder;
     text-align: center; 
     position: relative;
-<<<<<<< HEAD
   }
 
   /*leaderboard*/
@@ -1012,13 +1011,6 @@ color: #D66D50;
 /* Save Game Page Styles */
 .save-game-page {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-=======
-}
-
-/* Unique styles for the leaderboard */
-
-.leaderboard-body {
->>>>>>> 027c6a382bbc7f5c8e46a3fee45548acdab049b8
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1028,17 +1020,12 @@ color: #D66D50;
     background-color: #f5f5f5;
 }
 
-<<<<<<< HEAD
 .save-game-header {
-=======
-.leaderboard-header {
->>>>>>> 027c6a382bbc7f5c8e46a3fee45548acdab049b8
     position: absolute;
     top: 20px;
     left: 20px;
 }
 
-<<<<<<< HEAD
 .save-game-title {
     font-size: 24px;
     color: #333;
@@ -1263,13 +1250,11 @@ color: #D66D50;
     padding: 10px 20px;
     font-size: 18px;
     border: none;
->>>>>>> 027c6a382bbc7f5c8e46a3fee45548acdab049b8
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
-<<<<<<< HEAD
 .load-game-container .btn:hover {
     background-color: #084a57;
 }
@@ -1383,30 +1368,3 @@ body {
     -webkit-user-select: none;
     touch-action: manipulation;
 }
-=======
-.leaderboard-button-1 {
-    background-color: #FF5580;
-    color: #FFFFFF;
-}
-
-.leaderboard-button-2 {
-    background-color: #015A6C;
-    color: #FFFFFF;
-}
-
-.leaderboard-button:hover {
-    opacity: 0.8;
-}
-
-.leaderboard-your-score {
-    margin-top: 20px;
-}
-
-.leaderboard-button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    margin-top: 20px;
-}
->>>>>>> 027c6a382bbc7f5c8e46a3fee45548acdab049b8
